--- a/PA1.Rmd
+++ b/PA1.Rmd
@@ -1,4 +1,4 @@
-Assignment 1
+Peer Assessment 1
 ============
 
 In this assignment, we conduct a simple analysis  on the data of the number of 
@@ -10,7 +10,7 @@ First, we load the dataset.
 data <- read.csv('activity.csv')
 ```
 
-##Total Steps per Day
+
 We take a brief look at the data.
 
 ```{r}
@@ -24,7 +24,7 @@ med <- median(sums)
 The mean and median of the total number of steps taken per day are `r mean` and
 `r med` respectively.
 
-##Daily Walking Pattern
+
 It may be interesting looking at the person's daily walking pattern.
 
 ```{r}
@@ -47,7 +47,7 @@ max.int <- strftime(strptime(max.int,format='%H%M'),format='%H:%M')
 The time with the most steps taken is precisely the 5-minute interval 
 staring at `r max.int`.
 
-##Impute Missing Data
+
 As we can see, there are quite a few missing values in the data, however, which 
 might have made the previous analyses biased.
 
@@ -85,7 +85,7 @@ result is expected, since before imputing the missing values, the missing values
 were treated similarly to 0 when calculating the average total number of steps
 per day.
 
-##Comparison Between Weekdays and Weekends
+
 We may also be curious about the differences of walking patterns between
 weekdays and weekends. Below is a graphical comparison.
 
